# PolOptSim

./: CMakeLists.txt  OptSim.cc  README.md  g4cmake.sh
include/: Constants.hh  POLAR2ActionInitialization.hh  POLAR2ConfigMessenger.hh  POLAR2DetectorConstruction.hh  POLAR2EventAction.hh  POLAR2GlobalConfig.hh  POLAR2Hit.hh  POLAR2PhysicsList.hh  POLAR2PrimaryGeneratorAction.hh  POLAR2Run.hh  POLAR2RunAction.hh  POLAR2SensitiveDetector.hh  POLAR2SteppingAction.hh
macros/: gps_opticalphoton_spec.mac  gps_optph_unif.mac
src/: OptionsManager.cc  POLAR2ActionInitialization.cc  POLAR2ConfigMessenger.cc  POLAR2DetectorConstruction.cc  POLAR2EventAction.cc  POLAR2GlobalConfig.cc  POLAR2Hit.cc  POLAR2PhysicsList.cc  POLAR2PrimaryGeneratorAction.cc  POLAR2Run.cc  POLAR2RunAction.cc  POLAR2SensitiveDetector.cc  POLAR2SteppingAction.cc  XRFSDetectorConstruction.xx
